Fixed some padding, overflows on top-most elements to avoid unwanted page drift, shifted background-color and other attributes from .schedule-table-header-cell to .schedule-table-header

--- a/css/common.css
+++ b/css/common.css
@@ -20,10 +20,18 @@ body {
     padding: 0;
     background-color: white;
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 body:has(.nav-expanded) {
     overflow: hidden;
+}
+
+main {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 a {
@@ -570,6 +578,12 @@ a:not(.inline-link) {
     overflow: hidden;
 }
 
+.schedule-table-header {
+    background-color: var(--cb-blue);
+    color: white;
+    font-weight: bold;
+}
+
 .schedule-table-header,
 .schedule-table-row {
     display: flex;
@@ -587,9 +601,6 @@ a:not(.inline-link) {
 
 .schedule-table-header-cell {
     flex: 1;
-    font-weight: bold;
-    background-color: var(--cb-blue);
-    color: white;
     padding: 12px 15px;
 }
 
@@ -669,6 +680,10 @@ a:not(.inline-link) {
     background-color: var(--cb-blue);
     padding: 10px 20px;
     border-radius: 10px;
+}
+
+#values_philosophy_div {
+    padding: 0 20px 20px 20px;
 }
 
 .val-phil-collapsible-content-div {
